<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="@dimen/layout_padding_16"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/music_app_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_view_height"
        android:layout_marginTop="@dimen/image_view_margin_top"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/image_view_padding"
        android:scaleType="centerCrop"
        android:src="@drawable/music_app_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/albums_text_view"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_albums"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/songs_text_view"
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/albums_text_view"
            android:background="@color/category_songs"
            android:text="@string/category_songs" />

    </RelativeLayout>

</RelativeLayout>